--- a/spring/08_paging_sorting_query/pom.xml
+++ b/spring/08_paging_sorting_query/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>h2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
