--- a/spring/08_paging_sorting_query/src/main/resources/application.yml
+++ b/spring/08_paging_sorting_query/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring.datasource:
-  url: jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=TRUE
+  url: jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
   username: sa
   password:
   driverClassName: org.h2.Driver
